--- a/collector-values.yaml
+++ b/collector-values.yaml
@@ -1,29 +1,51 @@
-receivers:
-  otlp:
-    protocols:
-      grpc:
-      http:
-
-processors:
-  cumulativetodelta:
-
-exporters:
-  otlphttp:
-    endpoint: "${env:DT_ENDPOINT}"
-    headers:
-      Authorization: "Api-Token ${env:DT_API_TOKEN}"
-
-service:
-  pipelines:
-    traces:
-      receivers: [otlp]
-      processors: []
-      exporters: [otlphttp]
-    metrics:
-      receivers: [otlp]
-      processors: [cumulativetodelta]
-      exporters: [otlphttp]
-    logs:
-      receivers: [otlp]
-      processors: []
-      exporters: [otlphttp]
+mode: deployment
+image:
+  repository: ghcr.io/dynatrace/dynatrace-otel-collector/dynatrace-otel-collector
+  tag: latest
+command:
+  name: dynatrace-otel-collector
+extraEnvs:
+- name: DT_API_TOKEN
+  valueFrom:
+    secretKeyRef:
+      name: dynatrace-otelcol-dt-api-credentials
+      key: DT_API_TOKEN
+- name: DT_ENDPOINT
+  valueFrom:
+    secretKeyRef:
+      name: dynatrace-otelcol-dt-api-credentials
+      key: DT_ENDPOINT
+resources:
+  limits:
+    memory: 512Mi
+config:
+  receivers:
+    jaeger: null
+    prometheus: null
+    zipkin: null
+    otlp:
+      protocols:
+        grpc:
+          endpoint: $MY_POD_IP:4317
+        http:
+          endpoint: $MY_POD_IP:4318
+    filelog: null
+  exporters:
+    otlphttp:
+      endpoint: "${env:DT_ENDPOINT}"
+      headers:
+        Authorization: "Api-Token ${env:DT_API_TOKEN}"
+  service:
+    pipelines:
+      traces:
+        receivers: [otlp]
+        processors: []
+        exporters: [otlphttp]
+      metrics:
+        receivers: [otlp]
+        processors: []
+        exporters: [otlphttp]
+      logs:
+        receivers: [otlp]
+        processors: []
+        exporters: [otlphttp]
