--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,5 +1,5 @@
 site_name: "Dynatrace Observability Lab: OpenTelemetry Collector Data Ingest"
-repo_name: "GitHub"
+repo_name: "View Code on GitHub"
 repo_url: "https://github.com/dynatrace-perfclinics/obslab-otel-collector-data-ingest"
 nav:
   - '1. About': index.md
@@ -41,45 +41,3 @@ markdown_extensions:
 plugins:
     - search
     - markdownextradata
-extra:
-  dt:
-    rumagent:
-      snippet: <script type="text/javascript" src="https://js-cdn.dynatrace.com/jstag/145e12d594f/bf64904yne/c34f0df995aa51d_complete.js" crossorigin="anonymous"></script>
-  obslab: obslab-otel-collector-data-ingest
-  progressbar:
-    2. Getting Started:
-      - Create API Token
-    3. Install Components:
-      - Create Kubernetes Secret
-      - Add Helm Charts
-      - Install Collector
-      - Install OTEL Demo
-    4. Access User Interface:
-      - Access UI
-    5. View Observability Data:
-      - Create Workflow
-    6. Enable Automatic Baselines:
-      - Trigger the First Load Test
-      - Trigger the Second Load Test
-      - Trigger the Third Load Test
-      - Trigger the Fourth Load Test
-      - Trigger the Final Load Test
-      - Wait for Completion
-      - View Completed Training Runs
-      - View SRG Status using DQL
-      - View SRG Status
-    7. Run a Production SRG:
-      - Run Evaluation
-    8. Make a Change:
-      - Update Feature Flag
-      - Run Acceptance Load Test
-      - View Configuration Change Events
-    9. View Acceptance Test Results:
-      - View Data
-      - Analyse Failed Request
-      - Roll Back Change
-    
-extra_css: # relative to docs/
-  - css/style.css
-extra_javascript: # relative to docs/
-  - js/script.js
