--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -12,6 +12,8 @@ nav:
   - "12. What's Next?": whats-next.md
 theme:
   name: material
+  features:
+    - content.code.copy
   palette:
 
   # Palette toggle for automatic mode
