--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -49,10 +49,10 @@
 	},
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "chmod +x .devcontainer/post-create.sh && .devcontainer/post-create.sh",
+	"postCreateCommand": ".devcontainer/post-create.sh",
 
-	// Use 'postStartCommand' to run commands after the container starts.
-    "postStartCommand": "chmod +x .devcontainer/post-start.sh && .devcontainer/post-start.sh"
+	// // Use 'postStartCommand' to run commands after the container starts.
+    // "postStartCommand": "chmod +x .devcontainer/post-start.sh && .devcontainer/post-start.sh"
 
 	// // Add recommended secrets
 	// "secrets": {
